--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,7 @@
 				<h3>30-day, hassle-free money back guarantee</h3>
 				<p>
 					Gain access to our full library of tutorials along with expert code
-					reviews.
-				</p>
-				<p>
+					reviews. 
 					Perfect for any developers who are serious about honing their skills.
 				</p>
 			</section>
@@ -33,11 +31,15 @@
 			</section>
 			<section class="why-us">
 				<h3>Why Us</h3>
-				<p>
-					Tutorials by industry experts Peer &amp; expert code review Coding
-					exercises Access to our GitHub repos Community forum Flashcard decks
-					New videos every week
-				</p>
+				<ul>
+					<li>Tutorials by industry experts</li>
+					<li>Peer &amp; expert code review</li>
+					<li>Coding exercises</li>
+					<li>Access to our GitHub repos</li>
+					<li>Community forum</li>
+					<li>Flashcard decks</li>
+					<li>New videos every week</li>
+				</ul>
 			</section>
 		</main>
 	</body>
